2008-02-28  Torsten Rahn  <rahn@kde.org>

    * LICENSE.txt:
    * ChangeLog:

    - License Change: LGPL2 -> LGPL2+ 
      as communicated with all other developers.

2008-02-26  Torsten Rahn  <rahn@kde.org>

    * docs/paintingmaps.txt:
    * src/lib/GeoPainter.h:
    - Initial "draft" for GeoPainter.
      TODO: Implement the case for isGeoProjected = false 
      first and ignore the case true until the LMC is in 
      place. 
      See docs/paintingmaps.txt for details. 

2008-02-26  Torsten Rahn  <rahn@kde.org>

    * src/lib/geoscene/GeoSceneTest.cpp:
    * src/lib/geoscene/parser/GeoSceneTagHandler.cpp:
    * src/lib/MarblePlacemarkModel.cpp:
    * src/lib/geodata/GeoDataTest.cpp:
    * docs/dgml2.txt:

    - Minor fixes and typos

    * src/lib/geodata/parser/GeoDataParser.cpp:
    * src/lib/geodata/parser/GeoDataParser.h:

    - Fixes by Nikolas Zimmermann after I had 
      pointed out some issues with the previous API.

2008-02-25  Inge Wallin  <inge@lysator.liu.se>

	Krazy fixes:
	* src/lib/TileLoader.h,
	* src/lib/MarbleModel.cpp,
	* src/lib/geodata/handlers/kml/KMLElementDictionary.cpp,
	* src/lib/geodata/handlers/gpx/GPXElementDictionary.cpp,
	* src/lib/geodata/parser/GeoDataParser.cpp,
	* src/lib/geodata/parser/GeoDataParser.h,
	* src/lib/geodata/GeoDataTest.cpp,
	* src/lib/geoscene/handlers/dgml/DGMLElementDictionary.cpp,
	* src/lib/geoscene/parser/GeoSceneParser.cpp,
	* src/lib/geoscene/parser/GeoSceneParser.h,
	* src/lib/geoscene/GeoSceneTest.cpp:
	  Fix spelling errors

2008-02-24  Inge Wallin  <inge@lysator.liu.se>

	Krazy fixes:
	* src/lib/HttpFetchFile.h,
	* src/lib/MarblePlacemarkModel.h,
	* src/lib/TilereatorDialog.h,
	* src/lib/TileLoader.h,
	* src/lib/geodata/data/GeoDataIconStyle.h:
	  Check for C++ ctors that should be declared 'explicit'

	Krazy fixes:
	* src/lib/MapTheme.cpp,
	* src/lib/TinyWebBrowser.cpp,
	* src/lib/DiscCache.cpp,
	* src/lib/FileStoragePolicy.cpp,
	* src/lib/geoscene/data/GeoSceneMapTheme.cpp: 