@@ -39,6 +39,49 @@ bool SphericalProjection::screenCoordinates( const double lon, const double lat,
     return p.v[Q_Z] > 0;
 }
 
+bool SphericalProjection::screenCoordinates( const GeoDataPoint &geopoint, 
+                                             const ViewportParams *params,
+                                             const matrix &planetAxisMatrix,
+                                             int &x, int &y )
+{
+    double      absoluteAltitude = geopoint.altitude() + EARTH_RADIUS;
+    Quaternion  qpos             = geopoint.quaternion();
+
+    qpos.rotateAroundAxis( planetAxisMatrix );
+
+    double      pixelAltitude = ( ( params->radius() ) 
+                                  / EARTH_RADIUS * absoluteAltitude );
+    if ( geopoint.altitude() < 10000 ) {
+        // Skip placemarks at the other side of the earth.
+        if ( qpos.v[Q_Z] < 0 )
+            return false;
+    }
+    else {
+        double  earthCenteredX = pixelAltitude * qpos.v[Q_X];
+        double  earthCenteredY = pixelAltitude * qpos.v[Q_Y];
+        double  radius         = params->radius();
+
+        // Don't draw high placemarks (e.g. satellites) that aren't visible.
+        if ( qpos.v[Q_Z] < 0
+             && ( ( earthCenteredX * earthCenteredX
+                    + earthCenteredY * earthCenteredY )
+                  < radius * radius ) )
+            return false;
+    }
+
+    // Let (x, y) be the position on the screen of the placemark..
+    x = (int)(params->width()  / 2 + pixelAltitude * qpos.v[Q_X]);
+    y = (int)(params->height() / 2 - pixelAltitude * qpos.v[Q_Y]);
+
+    // Skip placemarks that are outside the screen area
+    if ( x < 0 || x >= params->width() || y < 0 || y >= params->height() ) {
+        return false;
+    }
+
+    return true;
+}
+
+
 bool SphericalProjection::geoCoordinates( const int x, const int y,
                                           const ViewportParams *params,
                                           double& lon, double& lat,
